# HoneyGUI

./: .config  .config.old  .cppcheck_suppressions  .gdbinit  .git-commit-template  .gitignore  .gitmodules  .kiro  .readthedocs-cn.yaml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  GetGitInfo.py  HoneyGUI.code-workspace  Kconfig.gui  LICENSE  README.md  README_zh.md  SConscript  WIDGET TREE PREVIEW.url  hgconfig.h  menu_config_win.py
example/application/watch_turnkey_410_502/: CMakeLists.txt  SConscript  app_activity.c  app_activity_exercise.c  app_activity_move.c  app_activity_stand.c  app_battery.c  app_bottom_view.c  app_calendar.c  app_compass.c  app_compass_info.c  app_heart.c  app_heart_s.c  app_main_watch.c  app_main_watch.h  app_menu.c  app_music.c  app_music_control.c  app_music_ctronl.c  app_stopwatch.c  app_timer.c  app_top_view.c  app_weather.c  app_workout.c  app_workout_start.c  app_workout_start_ctr.c  cJSON.c  watchface_earth.c  watchface_labubu.c  watchface_number.c  watchface_select.c  watchface_sport.c
gui_engine/3rd/: CMakeLists.txt
gui_engine/3rd/Arm2D/: SConscript
gui_engine/3rd/box2d/: SConscript
gui_engine/3rd/cJSON/: CMakeLists.txt  cJSON.c
gui_engine/3rd/ezXML/: SConscript  ezxml.c
gui_engine/3rd/js/: SConscript
gui_engine/3rd/letter_shell/: SConscript  shell.c  shell.h  shell_cfg.h  shell_companion.c  shell_ext.c  shell_ext.h  shell_fs.c  shell_port.c  shell_port.h
gui_engine/3rd/litegfx/: SConscript
gui_engine/3rd/minimp3/: SConscript  minimp3_ex.h
gui_engine/3rd/nanosvg/: CMakeLists.txt  SConscript
gui_engine/3rd/nanovg/: CMakeLists.txt  (+1 more)
lib/arm-none-eabi-gcc/: .config  .gitignore  CMakeLists.txt  RTL8762G.cmake  RTL8763D.cmake  RTL8763E.cmake  RTL8773E.cmake  RTL8773G.cmake  RTL87X3J.cmake  bulidRTL8763D.bat  bulidRTL8763E.bat  bulidRTL8773E.bat  bulidRTL8773G.bat  bulidRTL87X3J.bat  config.cmake
lib/armcc/: .config  CMakeLists.txt  RTL8762D.cmake  RTL8762G.cmake  RTL8763D.cmake  RTL8763E.cmake  RTL8773E.cmake  armcc.toolchain.cmake  bulidRTL8762D.bat  bulidRTL8763E.bat  bulidRTL8773E.bat  config.cmake
lib/armclang/: .config  .config.old  CMakeLists.txt  RTL8762D.cmake  RTL8762G.cmake  RTL8763D.cmake  RTL8773E.cmake  RTL8773G.cmake  RTL87X3J.cmake  armclang.toolchain.cmake  bulidRTL8762G.bat  bulidRTL8773E.bat  bulidRTL8773G.bat  config.cmake
lib/gcc/: .config  CMakeLists.txt  build.bat  build.sh  config.cmake
realgui/: AGENTS.md  CMakeLists.txt  SConscript  gui_version.h
realgui/3rd/: CMakeLists.txt  SConscript  THIRD_PARTY_LICENSES.md
realgui/DOM/: CMakeLists.txt  SConscript  XML_DOM.c  frontend_launcher.c
realgui/SaaA/: CMakeLists.txt  SConscript  ezhtml.c  frontend_launcher.c  js_extern_io.c  js_extern_io.h  js_init.c  js_key.c  js_mesh.c  js_smarthome.c  js_user.h  js_wifi.c  rvd.h
realgui/app/: SConscript  gui_app.c  gui_app.h
realgui/core/: AGENTS.md  CMakeLists.txt  SConscript  def_audio.h  def_color.h  def_compiler.h  def_engine.h  def_event.h  def_fb.h  def_file.h  def_fs.h  def_image.h  def_input.h  def_list.h  def_matrix.h  def_msg.h  def_os.h  def_type.h  def_vg.h  gui_math.c  gui_math.h  gui_matrix.c  gui_matrix.h  guidef.h
realgui/dc/: SConscript  gui_dirty_border.c  gui_dirty_border.h  gui_dirty_region.c  gui_dirty_region.h  gui_fb.c  gui_fb.h
realgui/engine/: AGENTS.md  CMakeLists.txt  SConscript  acc_api.c  acc_api.h  acc_arm2d.c  acc_arm_2d.c  acc_init.c  acc_sw.c  acc_sw_blend.c  acc_sw_bypass.c  acc_sw_bypass_matrix.h  acc_sw_cover.c  acc_sw_cover.h  acc_sw_filter.h  acc_sw_filter_matrix.h  acc_sw_ppe_sim.c  acc_sw_raster.c  acc_sw_raster.h  acc_sw_rle.c  acc_sw_rle.h  acc_sw_rle_bypass.c  acc_sw_rle_cover.c  draw_font.c  draw_font.h  draw_img.c  draw_img.h  draw_path.h  engine_gray.c  engine_gray.h  engine_gray16.c  engine_gray16.h  font_freetype.c  font_freetype.h  font_mem.c  font_mem.h  font_mem_img.c  font_mem_img.h  font_mem_matrix.c  font_mem_matrix.h  (+13 more)
realgui/example/: CMakeLists.txt
realgui/input/: SConscript  kb_algo.c  kb_algo.h  tp_algo.c  tp_algo.h  tp_algo_v2.c  wheel_algo.c  wheel_algo.h
realgui/misc/: SConscript
realgui/server/: CMakeLists.txt  SConscript  gui_api.c  gui_api.h  gui_api_acc.c  gui_api_acc.h  gui_api_audio.c  gui_api_audio.h  gui_api_color.c  gui_api_color.h  gui_api_dc.c  gui_api_dc.h  gui_api_fs.c  gui_api_fs.h  gui_api_ftl.c  gui_api_ftl.h  gui_api_indev.c  gui_api_indev.h  gui_api_os.c  gui_api_os.h  gui_components_init.c  gui_components_init.h  gui_listener.c  gui_listener.h  gui_message.c  gui_message.h  gui_pm.c  gui_server.c  gui_server.h
realgui/test/: SConscript  auto_test_app.c  auto_test_cmd.c  auto_test_cmd.h  auto_test_file.c  auto_test_file.h  image565.c  widget_size.py  widget_size.xlsx
realgui/widget/: AGENTS.md  CMakeLists.txt  SConscript  gui_3d.c  gui_3d.h  gui_button.c  gui_button.h  gui_calendar.c  gui_canvas.c  gui_canvas_arc.c  gui_canvas_arc.h  gui_canvas_img.c  gui_canvas_rect.c  gui_canvas_round_rect.c  gui_canvas_round_rect.h  gui_card.c  gui_cardview.c  gui_colorwheel.c  gui_combo.c  gui_cube.c  gui_curtain.c  gui_curtainview.c  gui_eq.c  gui_gallery.c  gui_gray.c  gui_gray.h  gui_image_array.c  gui_img.c  gui_img_live.c  gui_img_scope.c  gui_img_stb.c  gui_keyboard.c  gui_keyboard.h  gui_map.c  gui_menu_cellular.c  gui_multi_level.c  gui_multi_level.h  gui_obj.c  gui_obj.h  gui_page.c  (+58 more)
win32_sim/: .config  .config.old  .gitignore  CMakeLists.txt  Kconfig  SConscript  SConstruct  arm-none-eabi-gcc.toolchain.cmake  arm-toolchain.cmake  batch.cpp  cconfig.h  config.cmake  default.ld  honeygui_linux.ld  honeygui_linux.lds  main.c  main.opengl  menu_config.h  menu_config.py  music.cpp  nanovg_test.c  parse_kconfig.py  readme.md  rtk_gui_demo.c  sdl_demo.c  test_cmd.c  test_cmd.h  tiger.txt  version.rc
win32_sim/SDL2-2.26.0/: SConscript
win32_sim/gui_port/: SConscript  gui_config.h  gui_port.h  gui_port_acc.c  gui_port_dc.c  gui_port_filesystem.c  gui_port_os.c  gui_queue.c  gui_queue.h
win32_sim/lvgl_port/: SConscript  lv_conf.h  lv_port_disp.c  lv_port_fs.c  lv_port_fs_template.c  lv_port_indev.c
(+5518 files in other folders)
