if(ZEPHYR_BASE)
  if(CONFIG_REALTEK_HONEYGUI) #set to 1 to enable or variable to for depnedency
	  message(STATUS "ZEPHYR_BASE is set to: ${ZEPHYR_BASE}")
	  set(GUI_TARGET_NAME guiLib)
	  zephyr_library_named(${GUI_TARGET_NAME})
	  target_compile_options(${GUI_TARGET_NAME} PRIVATE -Wno-unused-variable)
	  target_compile_options(${GUI_TARGET_NAME} PRIVATE -Wno-maybe-uninitialized)
	  target_compile_options(${GUI_TARGET_NAME} PRIVATE -Wno-missing-braces)
	  target_compile_options(${GUI_TARGET_NAME} PRIVATE -Wno-char-subscripts)
	  target_compile_options(${GUI_TARGET_NAME} PRIVATE -Wno-double-promotion)
	  add_subdirectory(realgui)
	  add_subdirectory(example)
	  
  endif()
elseif(CONFIG_AMEBAGREEN2)
  ameba_internal_library(honeygui)
  message(STATUS "The value of Honeygui CURRENT_LIB_NAME is: ${CURRENT_LIB_NAME}")
  set(GUI_TARGET_NAME ${CURRENT_LIB_NAME})
  add_subdirectory(realgui)
  add_subdirectory(example)
else ()
  set(GUI_TARGET_NAME guiLib)
  add_library(${GUI_TARGET_NAME})
  add_subdirectory(realgui)
  add_subdirectory(example)
endif()

message(STATUS "[Complie info] target: ${GUI_TARGET_NAME}")