add_subdirectory(3rd)
add_subdirectory(app)
add_subdirectory(dc)
add_subdirectory(engine)
add_subdirectory(example)
add_subdirectory(input)
add_subdirectory(misc)
if(CONFIG_JAVASCRIPT_PARSER_SaaA)
add_subdirectory(SaaA)
endif()
add_subdirectory(server)
add_subdirectory(widget)
add_subdirectory(core)
add_subdirectory(DOM)
